Implemented process of creating a timer and getting one by id with redis streams and queues
